# EWDesktopAgent

./: .gitignore  CLAUDE.md  Prompt.md  docker-compose.yml  index.html  package-lock.json  package.json
.claude/: ralph-loop.local.md  settings.local.json
.github/workflows/: client-ci.yml  gateway-ci.yml
ai-gateway/: .dockerignore  AIGateway.sln  README.md
ai-gateway/src/AIGateway.API/: AIGateway.API.csproj  Dockerfile  Program.cs  appsettings.json
ai-gateway/src/AIGateway.API/Controllers/: TokenController.cs
ai-gateway/src/AIGateway.Domain/Entities/: TokenMapping.cs
ai-gateway/src/AIGateway.Infrastructure/: AIGateway.Infrastructure.csproj
ai-gateway/tests/AIGateway.Tests/: AIGateway.Tests.csproj
docs/: DEVELOPMENT.md
specs/001-intelligent-desktop-client/: architecture.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-intelligent-desktop-client/checklists/: requirements.md
specs/001-intelligent-desktop-client/contracts/: api.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  auth.rs  browser.rs  config.rs  core.rs  downloader.rs  file_ops.rs  lib.rs  main.rs  notification.rs  personalization.rs  reminder.rs  storage.rs  voice.rs
src-tauri/src/core/security/: mod.rs  risk_rules.json
src/components/: AssistantPanel.css  AssistantPanel.tsx  BrowserView.css  BrowserView.tsx  FileDialog.css  FileDialog.tsx  Settings.css  Settings.tsx  SystemList.css  SystemList.tsx  VoiceControl.css  VoiceControl.tsx
src/styles/: App.css  index.css
